# mpi-runner

./: .clang-format  CMakeLists.txt  LICENSE.txt  README.md  main.cpp
